@@ -10,6 +10,10 @@ Changes to Version 3.1-3
   
   o Anova() method for "coxph" objects no longer computes incorrect LR tests for models using the tt argument; in this case, Wald tests are substituted (following bug report by Ken Beath).
   
+  o crPlot(), crPlots(), crPlot3d(), and avPlot3d() now invisibly return coordinates rather than NULL, as avPlot() and avPlots() already did (following query by Jeff Reichman).
+  
+  o poTest() supports "polr" models with weights (suggestion of Ken Beath).
+  
   o Small changes to docs.
 
 Changes to Version 3.1-2
